--- a/index.html
+++ b/index.html
@@ -58,25 +58,26 @@
       <div id="sidebar_container">
         <div class="sidebar">
           <h3>Latest News</h3>
-          <h4>Graduated!</h4>
-          <h5>29th November 2016</h5>
+          <h4>Relocated to Liverpool.</h4>
+          <h5>28th April 2017</h5>
           <!-- <p>Check it out <a href="http://www.roe.ac.uk/~mlam/publications.html">here.</p> -->
         </div>
         <div class="sidebar">
           <h3>Useful Links</h3>
           <ul>
-            <li><a href="http://www.roe.ac.uk/" target="_blank">Royal Observatory</a></li>
-            <li><a href="http://www.ed.ac.uk/home" target="_blank">University of Edinburgh</a></li>
-            <li><a href="http://surveys.roe.ac.uk/wsa/" target="_blank">WFCAM Science Archive</a></li>
-            <li><a href="http://pan-starrs.ifa.hawaii.edu/public/" target="_blank">PanSTARRS</a></li>
-            <li><a href="http://www.skyscanner.net/" target="_blank">skyscanner</a></li>
+            <li><a href="https://www.astro.ljmu.ac.uk/Main_Page" target="_blank">Astrophysics Research Institute</a></li>
+            <li><a href="https://telescope.livjm.ac.uk/" target="_blank">Liverpool Telescope</a></li>
+            <li><a href="https://telescope.livjm.ac.uk/cgi-bin/lt_search" target="_blank">LT Archive</a></li>
+            <li><a href="https://pan-starrs.ifa.hawaii.edu/public/" target="_blank">PanSTARRS</a></li>
+            <li><a href="https://adsabs.harvard.edu/" target="_blank">Astrophysics Data System</a></li>
+            <li><a href="https://www.skyscanner.net/" target="_blank">skyscanner</a></li>
           </ul>
         </div>
       </div>
       <div class="content">
         <h1>About me</h1>
-        <p>I am PhD graduate working with <a href="http://www.roe.ac.uk/~nch/">Dr. Nigel Hambly</a> and <a href="http://www.roe.ac.uk/~nr/" target="_blank">Dr. Nick Rowell</a> at the <a href="http://www.roe.ac.uk/ifa/" target="_blank">Institute for Astronomy</a> of the <a href="http://www.ed.ac.uk/home" target="_blank">University of Edinburgh</a>. A fast learner, self-taught programmer with experience in parallel computing with MPI in Python, and excellent design skills for poster and PowerPoint presentation. Experienced tutor in Maths and Physical Science subjects at University level.</p>
-        <!-- studying the solar neighbourhood with <a href="http://pan-starrs.ifa.hawaii.edu/public/">PanSTARRS</a> -->
+        <p>I am PhD graduate from the <a href="http://www.roe.ac.uk/ifa/" target="_blank">Institute for Astronomy</a> of the <a href="http://www.ed.ac.uk/home" target="_blank">University of Edinburgh</a>. I worked with <a href="http://www.roe.ac.uk/~nch/">Dr. Nigel Hambly</a> and <a href="http://www.roe.ac.uk/~nr/" target="_blank">Dr. Nick Rowell</a> in the area of the solar neighbourhood with <a href="http://pan-starrs.ifa.hawaii.edu/public/">PanSTARRS</a>. A fast learner, self-taught programmer with experience in parallel computing with MPI in Python, and excellent design skills for poster and PowerPoint presentation. Experienced tutor in Maths and Physical Science subjects at University level.</p>
+        <p>Currently, I am working to test/develop in collaboration with the <a href="http://www.narit.or.th/en/" target="_blank">National Astronomical Research Institute of Thailand (NARIT)</a> to a new archive system to be implemented on the 4-meter <a href="http://telescope.livjm.ac.uk/lt2/" target="_blank">Liverpool Telescope 2 (LT2)</a> as well as the cluster of telescopes operated by NARIT.</p>
         <ul id="images">
           <li><img src="images/mypic0.jpg" height="300" alt="seascape_one" /></li>
           <li><img src="images/mypic1.jpg" height="300" alt="seascape_two" /></li>
@@ -88,7 +89,7 @@
       </div>
     </div>
     <footer>
-      <p>Last updated on: 7th February 2017 | Copyright &copy; scenic_photo_two | <a href="http://www.css3templates.co.uk" target="_blank">design from css3templates.co.uk</a></p>
+      <p>Last updated on: 15th May 2017 | Copyright &copy; scenic_photo_two | <a href="http://www.css3templates.co.uk" target="_blank">design from css3templates.co.uk</a></p>
     </footer>
   </div>
   <p>&nbsp;</p>
