--- a/publications.html
+++ b/publications.html
@@ -58,18 +58,19 @@
       <div id="sidebar_container">
         <div class="sidebar">
           <h3>Latest News</h3>
-          <h4>Graduated!</h4>
-          <h5>29th November 2016</h5>
+          <h4>Relocated to Liverpool.</h4>
+          <h5>28th April 2017</h5>
           <!-- <p>Check it out <a href="http://www.roe.ac.uk/~mlam/publications.html">here.</p> -->
         </div>
         <div class="sidebar">
           <h3>Useful Links</h3>
           <ul>
-            <li><a href="http://www.roe.ac.uk/" target="_blank">Royal Observatory</a></li>
-            <li><a href="http://www.ed.ac.uk/home" target="_blank">University of Edinburgh</a></li>
-            <li><a href="http://surveys.roe.ac.uk/wsa/" target="_blank">WFCAM Science Archive</a></li>
-            <li><a href="http://pan-starrs.ifa.hawaii.edu/public/" target="_blank">PanSTARRS</a></li>
-            <li><a href="http://www.skyscanner.net/" target="_blank">skyscanner</a></li>
+            <li><a href="https://www.astro.ljmu.ac.uk/Main_Page" target="_blank">Astrophysics Research Institute</a></li>
+            <li><a href="https://telescope.livjm.ac.uk/" target="_blank">Liverpool Telescope</a></li>
+            <li><a href="https://telescope.livjm.ac.uk/cgi-bin/lt_search" target="_blank">LT Archive</a></li>
+            <li><a href="https://pan-starrs.ifa.hawaii.edu/public/" target="_blank">PanSTARRS</a></li>
+            <li><a href="https://adsabs.harvard.edu/" target="_blank">Astrophysics Data System</a></li>
+            <li><a href="https://www.skyscanner.net/" target="_blank">skyscanner</a></li>
           </ul>
         </div>
       </div>
@@ -83,7 +84,7 @@
       </div>
     </div>
     <footer>
-      <p>Last updated on: 7th February 2017 | Copyright &copy; scenic_photo_two | <a href="http://www.css3templates.co.uk" target="_blank">design from css3templates.co.uk</a></p>
+      <p>Last updated on: 15th May 2017 | Copyright &copy; scenic_photo_two | <a href="http://www.css3templates.co.uk" target="_blank">design from css3templates.co.uk</a></p>
     </footer>
   </div>
   <p>&nbsp;</p>
