--- a/contact.html
+++ b/contact.html
@@ -58,38 +58,39 @@
       <div id="sidebar_container">
         <div class="sidebar">
           <h3>Latest News</h3>
-          <h4>Graduated!</h4>
-          <h5>29th November 2016</h5>
+          <h4>Relocated to Liverpool.</h4>
+          <h5>28th April 2017</h5>
           <!-- <p>Check it out <a href="http://www.roe.ac.uk/~mlam/publications.html">here.</p> -->
         </div>
         <div class="sidebar">
           <h3>Useful Links</h3>
           <ul>
-            <li><a href="http://www.roe.ac.uk/" target="_blank">Royal Observatory</a></li>
-            <li><a href="http://www.ed.ac.uk/home" target="_blank">University of Edinburgh</a></li>
-            <li><a href="http://surveys.roe.ac.uk/wsa/" target="_blank">WFCAM Science Archive</a></li>
-            <li><a href="http://pan-starrs.ifa.hawaii.edu/public/" target="_blank">PanSTARRS</a></li>
-            <li><a href="http://www.skyscanner.net/" target="_blank">skyscanner</a></li>
+            <li><a href="https://www.astro.ljmu.ac.uk/Main_Page" target="_blank">Astrophysics Research Institute</a></li>
+            <li><a href="https://telescope.livjm.ac.uk/" target="_blank">Liverpool Telescope</a></li>
+            <li><a href="https://telescope.livjm.ac.uk/cgi-bin/lt_search" target="_blank">LT Archive</a></li>
+            <li><a href="https://pan-starrs.ifa.hawaii.edu/public/" target="_blank">PanSTARRS</a></li>
+            <li><a href="https://adsabs.harvard.edu/" target="_blank">Astrophysics Data System</a></li>
+            <li><a href="https://www.skyscanner.net/" target="_blank">skyscanner</a></li>
           </ul>
         </div>
       </div>
       <div class="content">
         <h1>Address</h1>
           <div class="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1117.7723386402224!2d-3.1877933141349466!3d55.922594986697106!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4887c765dcb475d9%3A0xb0d752e7fabaac1!2sRoyal+Observatory!5e0!3m2!1sen!2suk!4v1392743132192" width="100%" height="300" frameborder="0" style="border:0"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2378.5100567977015!2d-2.970053079810701!3d53.4057036589809!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487b26df03964da7%3A0x1292d44137b6637d!2sAstrophysics+Research+Institute+Liverpool+John+Moores+University!5e0!3m2!1sen!2suk!4v1494867029336" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
           </div><br>
-          Institute for Astronomy<br>
-          The University of Edinburgh<br>
-          Royal Observatory<br>
-          Blackford Hill<br>
-          Edinburgh EH9 3HJ<br>
-          UK</p>
+          Astrophysics Research Institute<br>
+          Liverpool John Moores University<br>
+          IC2, Liverpool Science Park<br>
+          146 Brownlow Hill<br>
+          Liverpool L3 5RF<br>
+          United Kingdom<br>
         <h1>E-mail</h1>
-        <p>mlam[at]roe.ac.uk</p>
+        <p>ariclam[at]ljmu.ac.uk</p>
       </div>
     </div>
     <footer>
-      <p>Last updated on: 7th February 2017 | Copyright &copy; scenic_photo_two | <a href="http://www.css3templates.co.uk" target="_blank">design from css3templates.co.uk</a></p>
+      <p>Last updated on: 15th May 2017 | Copyright &copy; scenic_photo_two | <a href="http://www.css3templates.co.uk" target="_blank">design from css3templates.co.uk</a></p>
     </footer>
   </div>
   <p>&nbsp;</p>
