--- a/outreach.html
+++ b/outreach.html
@@ -58,29 +58,30 @@
       <div id="sidebar_container">
         <div class="sidebar">
           <h3>Latest News</h3>
-          <h4>Graduated!</h4>
-          <h5>29th November 2016</h5>
+          <h4>Relocated to Liverpool.</h4>
+          <h5>28th April 2017</h5>
           <!-- <p>Check it out <a href="http://www.roe.ac.uk/~mlam/publications.html">here.</p> -->
         </div>
         <div class="sidebar">
           <h3>Useful Links</h3>
           <ul>
-            <li><a href="http://www.roe.ac.uk/" target="_blank">Royal Observatory</a></li>
-            <li><a href="http://www.ed.ac.uk/home" target="_blank">University of Edinburgh</a></li>
-            <li><a href="http://surveys.roe.ac.uk/wsa/" target="_blank">WFCAM Science Archive</a></li>
-            <li><a href="http://pan-starrs.ifa.hawaii.edu/public/" target="_blank">PanSTARRS</a></li>
-            <li><a href="http://www.skyscanner.net/" target="_blank">skyscanner</a></li>
+            <li><a href="https://www.astro.ljmu.ac.uk/Main_Page" target="_blank">Astrophysics Research Institute</a></li>
+            <li><a href="https://telescope.livjm.ac.uk/" target="_blank">Liverpool Telescope</a></li>
+            <li><a href="https://telescope.livjm.ac.uk/cgi-bin/lt_search" target="_blank">LT Archive</a></li>
+            <li><a href="https://pan-starrs.ifa.hawaii.edu/public/" target="_blank">PanSTARRS</a></li>
+            <li><a href="https://adsabs.harvard.edu/" target="_blank">Astrophysics Data System</a></li>
+            <li><a href="https://www.skyscanner.net/" target="_blank">skyscanner</a></li>
           </ul>
         </div>
       </div>
       <div class="content">
         <h1>Exoplanet Android Application Development</h1>
         <p><img src="images/icon.png" alt="" height=200 width=200></p>
-        <p>I am working with the Institute for Astronomy Young Academic Software Development Team since October 2012. The group is currently working on developing an application for Android based smartphone that describes and explains the science of extrasolar planet detection. Beta-version is now available. You can find out more <a href="https://cylammarco.github.io/index.html">here</a>.</p>
+        <p>I worked with the Institute for Astronomy Young Academic Software Development Team between 2012 and 2015. The group developed an application for Android based smartphone that describes and explains the science of extrasolar planet detection. Beta-version is now available. You can find out more <a href="https://cylammarco.github.io/index.html">here</a>.</p>
       </div>
     </div>
     <footer>
-      <p>Last updated on: 7th February 2017 | Copyright &copy; scenic_photo_two | <a href="http://www.css3templates.co.uk" target="_blank">design from css3templates.co.uk</a></p>
+      <p>Last updated on: 15th May 2017 | Copyright &copy; scenic_photo_two | <a href="http://www.css3templates.co.uk" target="_blank">design from css3templates.co.uk</a></p>
     </footer>
   </div>
   <p>&nbsp;</p>
