--- a/index.html
+++ b/index.html
@@ -76,7 +76,10 @@
       </div>
       <div class="content">
         <h1>About me</h1>
-        <p>I am PhD graduate from the <a href="http://www.roe.ac.uk/ifa/" target="_blank">Institute for Astronomy</a> of the <a href="http://www.ed.ac.uk/home" target="_blank">University of Edinburgh</a>. I worked with <a href="http://www.roe.ac.uk/~nch/">Dr. Nigel Hambly</a> and <a href="http://www.roe.ac.uk/~nr/" target="_blank">Dr. Nick Rowell</a> in the area of the solar neighbourhood with <a href="http://pan-starrs.ifa.hawaii.edu/public/">PanSTARRS</a>. A fast learner, self-taught programmer with experience in parallel computing with MPI in Python, and excellent design skills for poster and PowerPoint presentation. Experienced tutor in Maths and Physical Science subjects at University level.</p>
+        <p>I am a PhD graduate from the <a href="http://www.roe.ac.uk/ifa/" target="_blank">Institute for Astronomy</a> of the <a href="http://www.ed.ac.uk/home" 
+target="_blank">University of Edinburgh</a>. I worked with <a href="http://www.roe.ac.uk/~ferguson/">Prof. Annette Ferguson</a>, <a href="http://www.roe.ac.uk/~nch/">Dr. Nigel 
+Hambly</a> and <a href="http://www.roe.ac.uk/~nr/" target="_blank">Dr. Nick 
+Rowell</a> in the area of the solar neighbourhood with <a href="http://pan-starrs.ifa.hawaii.edu/public/">PanSTARRS</a>. A fast learner, self-taught programmer with experience in parallel computing with MPI in Python, and excellent design skills for poster and PowerPoint presentation. Experienced tutor in Maths and Physical Science subjects at University level.</p>
         <p>Currently, I am working to test/develop in collaboration with the <a href="http://www.narit.or.th/en/" target="_blank">National Astronomical Research Institute of Thailand (NARIT)</a> to a new archive system to be implemented on the 4-meter <a href="http://telescope.livjm.ac.uk/lt2/" target="_blank">Liverpool Telescope 2 (LT2)</a> as well as the cluster of telescopes operated by NARIT.</p>
         <ul id="images">
           <li><img src="images/mypic0.jpg" height="300" alt="seascape_one" /></li>
