added dropdown menu example

--- a/jsplots/stacked_bar_chart.html
+++ b/jsplots/stacked_bar_chart.html
@@ -36,7 +36,7 @@ var z = d3.scaleOrdinal()
 var stack = d3.stack()
     .offset(d3.stackOffsetExpand);
 
-d3.csv("data.csv", type, function(error, data) {
+d3.csv("data_stacked_bar.csv", type, function(error, data) {
   if (error) throw error;
 
   data.sort(function(a, b) { return b[data.columns[1]] / b.total - a[data.columns[1]] / 
